# P5G3D

./: .gitignore  .gitmodules  CMakeLists.txt
P5GLSL/: Camera.cpp  Camera.h  CatmullRom.cpp  DirectionalLight.h  Light.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  P5GLSL.sln  P5GLSL.vcxproj  P5GLSL.vcxproj.filters  PointLight.h  Scene.h  Shader.cpp  Shader.h  SpotLight.h  main.cpp.v0  makeDocumentation.bat
P5GLSL/docs/html/: _light_8h_source.html  _point_light_8h_source.html  _shader_8h_source.html  annotated.html  class_camera-members.html  class_camera.html  class_catmull_rom-members.html  class_directional_light-members.html  class_directional_light.html  class_light.html  class_mesh-members.html  class_mesh.html  class_object-members.html  class_object.html  class_point_light-members.html  class_point_light.html  class_scene-members.html  class_scene.html  class_shader-members.html  class_shader.html  class_spot_light-members.html  class_spot_light.html  classes.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  struct_light_params-members.html  struct_light_params.html
P5GLSL/docs/latex/: annotated.tex  class_camera.eps  class_camera.tex  class_catmull_rom.tex  class_directional_light.tex  class_light.tex  class_mesh.tex  class_object.tex  class_point_light.tex  class_scene.tex  class_shader.tex  class_spot_light.tex  hierarchy.tex  refman.tex  struct_light_params.tex
P5GLSL/scr/: Camera.cpp  Camera.h  DirectionalLight.h  Doxyfile  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Object.cpp  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  auxiliar.h  main.cpp  main.dox
build.old/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Taranis.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
build.old/ext/glew/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glew.sln  libglew_static.vcxproj  libglew_static.vcxproj.filters  libglewmx_static.vcxproj
build.old/ext/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
docs/: _b_o_x_8h_source.html  _camera_8h_source.html  _catmull_rom_8h_source.html  _directional_light_8h_source.html  _mesh_8h_source.html  _object_8h_source.html  _scene_8h_source.html  _spot_light_8h_source.html  annotated.html  auxiliar_8h_source.html  class_camera-members.html  class_camera.html  class_catmull_rom.html  class_directional_light-members.html  class_directional_light.html  class_light-members.html  class_light.html  class_mesh.html  class_object-members.html  class_object.html  class_point_light-members.html  class_point_light.html  class_scene-members.html  class_scene.html  class_shader-members.html  class_shader.html  class_spot_light-members.html  class_spot_light.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html
docs/html/: annotated.html  class_camera.html  class_catmull_rom-members.html  class_directional_light.html  class_light-members.html  class_light.html  class_mesh-members.html  class_point_light-members.html  class_scene.html  class_shader.html  class_spot_light.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js
docs/html/search/: all_0.js  all_2.js  all_5.js  all_6.js  all_8.js  all_b.js  classes_0.js  classes_5.js  classes_6.js  functions_0.js  functions_5.js  functions_8.js  (+5 more)
docs/latex/: annotated.tex  class_catmull_rom.tex  class_light.tex  class_object.eps  class_scene.tex  class_shader.tex  index.tex  refman.tex
docs/search/: all_0.js  all_a.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  variables_1.js  variables_2.js
include/camera/: camera.h
include/light/: light.h  pointLight.h  spotLight.h
include/mesh/: mesh.h  quad.h
include/renderer/: command_buffer.h  render_target.h  renderer.h  shader_types.h
include/shading/: material.h  shader.h  texture.h
include/utils/: log.h
libs/lib/: assimp-vc140-mt.exp  assimp-vc140-mt.lib
shaders/: shader.v1.frag  shader.v1.vert
shaders_P5/: shader.v1.frag  shader.v1.vert
src/: Camera.cpp  CatmullRom.h  DirectionalLight.cpp  Doxyfile  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.h  PointLight.h  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SpotLight.h  Texture.cpp  Texture.h  Texturecpp.cpp  command_buffer.cpp  command_buffer.h  log.cpp  main.cpp  main.cpp.old  quad.cpp  render_target.cpp  render_target.h  renderercpp.cpp  shader_types.h  string_id.h
src/camera/: camera.cpp
src/light/: directionalLight.cpp  light.cpp  pointLight.cpp  spotLight.cpp
src/mesh/: mesh.cpp  quad.cpp
src/renderer/: command_buffer.cpp  render_target.cpp  renderer.cpp
src/shading/: material.cpp  shader.cpp  texture.cpp
src/utils/: catmullRom.cpp  log.cpp
(+21 files in other folders)
